...
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@id/quiz_game_question_text"
            android:layout_marginTop="65dp">

            <RadioButton
                android:id="@+id/quiz_game_radio_group_option1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="Option 1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:freezesText="true"/>

            <RadioButton
                android:id="@+id/quiz_game_radio_group_option2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:minHeight="48dp"
                android:text="Option 2"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:freezesText="true"/>

            <RadioButton
                android:id="@+id/quiz_game_radio_group_option3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="Option 3"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:freezesText="true"/>
...
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:freezesText="true"/>
        </RadioGroup>

        <Button
            android:id="@+id/quiz_game_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quiz_game_radio_group"
            android:layout_marginTop="16dp"
            android:freezesText="true"
            android:minHeight="100dp"
            android:text="Confirm" />
    </RelativeLayout>
</ScrollView>
