...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/play_quiz_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_500"
                android:text="Play Quiz"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/load_example_questions_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_500"
                android:text="Load Example Questions"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
