<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".Fragments.QuizGame.QCListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/tag_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backToHomeQCButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="Back to home button"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/qcHelperButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="Helper button"
            android:src="@drawable/ic_launcher_foreground" />
    </FrameLayout>

</LinearLayout>