...
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/quiz_start_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_500"
            android:text="Start Quiz"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </LinearLayout>

</LinearLayout>
